--- a/index.html
+++ b/index.html
@@ -527,17 +527,17 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section><section id="pierwsze-kroki" class="slide level2">
 <h1>Pierwsze kroki</h1>
 <ol type="1">
-<li>Ściągnij odpowiadający motyw (theme)</li>
+<li>Ściągnij odpowiadający motyw (theme): <a href="http://themes.gohugo.io/" class="uri">http://themes.gohugo.io/</a></li>
 <li>Stwórz nowy projekt</li>
 <li>Wywołaj funkcję <code>blogdown::new_site()</code> w argumencie podając motyw</li>
-<li>I gotowe - właśnie stworzyłe/aś kompletną stronę internetową :)</li>
 </ol>
+<p>I gotowe - właśnie stworzyłe/aś kompletną stronę internetową :)</p>
 <p><img src="img/s007_new_site.png" /></p>
 </section></section>
 <section><section id="dodawanie-wpisow" class="titleslide slide level1"><h1>Dodawanie wpisów</h1></section><section id="nowy-wpis" class="slide level2">
 <h1>Nowy wpis</h1>
 <ul>
-<li>Automatyczne przeładowywanie strony: <code>options(servr.daemon = TRUE)</code> a następnie <code>blogdown::serve_site()</code> lub wybranie tej opcji z <code>Addins</code></li>
+<li>Automatyczne przeładowywanie strony: <code>options(servr.daemon = TRUE)</code>, a następnie <code>blogdown::serve_site()</code> lub wybranie tej opcji z <code>Addins</code></li>
 <li>Nowy wpis: <code>blogdown::new_post()</code> lub wybranie tej opcji z <code>Addins</code></li>
 </ul>
 <p><img src="img/s008_new_post.png" /></p>
@@ -656,6 +656,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section><section id="dziekuje-za-uwage" class="titleslide slide level1"><h1>Dziękuję za uwagę</h1></section><section id="zroda" class="slide level2">
 <h1>Żródła</h1>
 <p>Dokumentacja blogdowna: <a href="https://bookdown.org/yihui/blogdown/" class="uri">https://bookdown.org/yihui/blogdown/</a></p>
+<p>Prezentacja dostępna na GitHubie: <a href="https://potockan.github.io/whyr2017/" class="uri">https://potockan.github.io/whyr2017/</a></p>
 </section></section>
     </div>
   </div>
